--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     const splToken = splToken_js;
 
     // Tus claves de Pinata (solo para pruebas, ocultar en producción)
-    const PINATA_API_KEY = "AQUÍ_TU_API_KEY";
-    const PINATA_API_SECRET = "AQUÍ_TU_API_SECRET";
+    const PINATA_API_KEY = "840bc236b139c5c95a62";
+    const PINATA_API_SECRET = "53b9ab4d1419ce8eceed8fe96927a3883a051aa1acd73e26803fa924e71bd5b9";
 
     async function uploadToPinata(file, isJson = false) {
       const url = "https://api.pinata.cloud/pinning/" + (isJson ? "pinJSONToIPFS" : "pinFileToIPFS");
